--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,7 @@ en:
   language_code_en: English
   language_code_jp: Japanese
   language_code_zh: Chinese
+  table_of_contents: Contents
 
   label_entry_headers_step: Step
   label_entry_headers_totle_step: Step
