--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -122,6 +122,7 @@ zh:
   label_icm_incident_request_last_date: 最后回应日期
   label_icm_incident_request_upgrade: 升级
   label_incident_request: 事故单
+  label_incident_request_title: 事故单主题
   label_icm_incident_request_submitted_by: 提交人
   label_icm_incident_request_incident_phase_code: 阶段
   label_icm_incident_request_submitted_date: 提交日期
@@ -150,6 +151,7 @@ zh:
   label_icm_incident_request_incident_sub_category: 子分类
   label_icm_create_relate_change_request: 创建RFC
   label_icm_incident_request_relation_type: 关联为
+  label_icm_incident_request_relation_types: 关联类别
   label_icm_incident_request_estimated_date: 计划完成日期
   label_icm_incident_request_relation_config_items: 配置项
   #========================= end icm incident_requests_controller=======================#
@@ -159,6 +161,9 @@ zh:
   label_icm_incident_reply_incident_status_code: 新状态
   apply_skm: 搜索知识库
   label_icm_incident_journal_list: 回复历史
+  label_icm_incident_journal_person: 回复人
+  label_icm_incident_journal_content: 回复内容
+  label_icm_incident_journal_date: 回复日期
   label_icm_incident_journal_new: 回复
   label_icm_incident_journal_back_to_request_list: 返回事故单列表
   label_icm_incident_request_base_info: 基本信息
