--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -4,6 +4,7 @@ zh:
   language_code_en: 英语
   language_code_jp: 日语
   language_code_zh: 中文
+  table_of_contents: 目录
 
   label_entry_headers_step: 步骤
   label_entry_headers_totle_step: 步
