--- a/modules/com/config/locales/en.yml
+++ b/modules/com/config/locales/en.yml
@@ -19,6 +19,7 @@ en:
   #=========================com config attributes=======================#
   label_com_config_attribute: Config Attribute
   label_com_config_attribute_list: Config Attribute List
+  label_config_class_attribute_extend: Attribute Extend
   label_com_config_attribute_new: New Config Attribute
   label_com_config_attribute_edit: Edit Config Attribute
   label_com_config_attribute_code: Code
@@ -28,6 +29,7 @@ en:
   label_com_config_attribute_value_from: Value From
   label_com_config_attribute_input_value: Input Value
   config_class_attribute_required_flag: Required
+  config_class_attribute_display_flag: Display
   #=========================end com config attributes=======================#
 
   #==========================config item==================================#
