--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -154,7 +154,7 @@ en:
   label_icm_incident_category_apply_system: Apply System
   label_icm_incident_category_system: Category System
   label_icm_incident_request_relation_types: Relation Types
-  label_icm_incident_request_relation_type: The Relation
+  label_icm_incident_request_relation_type: Relation
   label_icm_incident_request_relation: Relation Types
   label_icm_incident_request_estimated_date: Estimated Date
   label_icm_incident_request_relation_config_items: Config Item
@@ -164,12 +164,12 @@ en:
   label_icm_incident_reply_support_person_id: Referred person
   apply_skm: Search Service Knowledge
   label_icm_incident_reply_incident_status_code: New Incident Status
-  label_icm_incident_journal_list: Request histories
+  label_icm_incident_journal_list: Replies
   label_icm_incident_journal_person: Request Person
   label_icm_incident_journal_content: Request Content
   label_icm_incident_journal_date: Request Date
   label_icm_incident_journal_new: Reply
-  label_icm_incident_journal_back_to_request_list: Back to request list
+  label_icm_incident_journal_back_to_request_list: Back List
   label_icm_incident_request_base_info: Base information
   label_icm_incident_request_status_info: Status information
   label_icm_incident_journal_reply: Comments
@@ -182,8 +182,8 @@ en:
   label_icm_incident_joural_back_to_request: Back to incident
   label_icm_reply_title: reply at %{message} ago
   label_icm_submit_title: submit at %{message} ago
-  label_icm_incident_more_info: More information
-  label_icm_incident_less_info: Less information
+  label_icm_incident_more_info: More
+  label_icm_incident_less_info: Less
   label_action_edit_pass: Pass Incident Request
   label_action_update_pass: Pass Incident Request
   label_action_edit_close: Close Incident Request
