添加知识库专家审核功能： 1,在知识频道页面添加审核人员； 2,新建知识时根据设置的审核人员,自动添加审核任务,只有审核通过的知识才能发布； 3,添加审核页面,用来确定审核心是否通过。

--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -172,7 +172,9 @@ en:
 
   label_skm_owned_channels: Owned Channels
   label_skm_channel_management: Management Channels
-  label_skm_channel_group_management: Management Groups
+  label_skm_channel_group_management: Add Groups
+  label_skm_channel_approval_people: Channel Approval People
+  label_skm_channel_approval_management: Add Approval Person
 
   label_action_new_from_icm_request: Create Knowledge From Incident Request
   button_skm_entry_header_new: New
