--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -173,6 +173,8 @@ zh:
   label_skm_owned_channels: 已经拥有的频道
   label_skm_channel_management: 添加频道
   label_skm_channel_group_management: 添加组
+  label_skm_channel_approval_people: 频道审核人员
+  label_skm_channel_approval_management: 添加审核人员
 
   label_action_new_from_icm_request: 从事故单创建知识文章
 
