修改公告的英文翻译内容

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -946,7 +946,7 @@ en:
   label_irm_bulletin_content: Content
   label_irm_bulletin_sticky_flag: Sticky
   label_irm_bulletin_highlight_flag: Highlight
-  label_irm_bulletin_page_views: Page Views
+  label_irm_bulletin_page_views: Views
   label_irm_bulletin_published_date: Published Date
   label_irm_bulletin_access: Access Control
   label_irm_bulletin_access_list: Accessiable List
