--- a/modules/skm/config/locales/en.yml
+++ b/modules/skm/config/locales/en.yml
@@ -180,3 +180,18 @@ en:
   button_skm_entry_header_new: New
   tip_skm_entry_header_full_search: Search knowledges title, content...
   label_skm_entry_header_reference: Reference
+  #============================== wiki ======================================
+  label_skm_wiki: Wiki
+  label_skm_wiki_name: Name
+  label_skm_wiki_description: Description
+  label_skm_wiki_content_format: Format
+  label_skm_wiki_content: Content
+  label_skm_wiki_new: New Wiki
+  label_skm_wiki_edit: Edit Wiki
+  label_skm_wiki_history: History
+  label_skm_wiki_compare: Versions Compare
+  label_skm_wiki_revert: Revert
+  label_skm_wiki_revert_message:  Revert change between %{from} and %{to}
+  label_skm_wiki_default_commit_message: Message
+  label_skm_wiki_preview: Preview
+  #============================== end wiki  ===================================
