--- a/modules/skm/config/locales/zh.yml
+++ b/modules/skm/config/locales/zh.yml
@@ -181,3 +181,18 @@ zh:
   button_skm_entry_header_new: 新建知识
   tip_skm_entry_header_full_search: 搜索知识库文章标题、内容...
   label_skm_entry_header_reference: 请参考以下知识项
+  #============================== wiki ======================================
+  label_skm_wiki: Wiki
+  label_skm_wiki_name: 名称
+  label_skm_wiki_description: 描述
+  label_skm_wiki_content_format: 格式
+  label_skm_wiki_content: 内容
+  label_skm_wiki_new: 新建Wiki
+  label_skm_wiki_edit: 编辑Wiki
+  label_skm_wiki_history: 历史版本
+  label_skm_wiki_compare: 对比历史版本
+  label_skm_wiki_revert: 撤销修改
+  label_skm_wiki_revert_message:  撤销修改 %{from} 到 %{to} 之间的修改
+  label_skm_wiki_default_commit_message: 信息
+  label_skm_wiki_preview: 预览
+  #============================== end wiki  ===================================
