--- a/modules/skm/config/locales/zh.yml
+++ b/modules/skm/config/locales/zh.yml
@@ -200,6 +200,7 @@ zh:
   label_skm_wiki_tags: 关键字
   label_skm_wiki_img: 图
   label_skm_wiki_table: 表
+  label_skm_wiki_table_of_content: 目录
   #============================== end wiki  ===================================
   #============================== wiki ======================================
   label_skm_wiki_template: Wiki模板
@@ -212,3 +213,15 @@ zh:
   label_skm_wiki_template_preview: 预览
   label_skm_wiki_template_private_flag: 私有
   #============================== end wiki  ===================================
+  #============================== book ======================================
+  label_skm_book: Wiki专题
+  label_skm_book_list: Wiki专题列表
+  label_skm_book_name: 名称
+  label_skm_book_description: 描述
+  label_skm_book_new: 新建Wiki专题
+  label_skm_book_edit: 编辑Wiki专题
+  label_skm_book_preview: 预览
+  label_skm_book_wiki: Wiki专题章节
+  label_skm_book_wiki_order: 排序
+  label_skm_book_publish: 发布
+  #============================== end book  ===================================
