--- a/modules/skm/config/locales/zh.yml
+++ b/modules/skm/config/locales/zh.yml
@@ -82,7 +82,7 @@ zh:
   label_skm_entry_header_approval_status_r: 拒绝
   label_skm_entry_header_approval_reset: 重新申请审核
   label_skm_entry_header_load: 载入详情
-  label_skm_entry_header_approve: 审核知识：
+  label_skm_entry_header_approve: 审核知识
   label_skm_entry_header_approve_note_placeholder: 请填写审核意见......
   label_skm_entry_header_button_ok: 通过审核
   label_skm_entry_header_button_no: 拒绝
