--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -152,6 +152,8 @@ zh:
   search_options: 搜索选项
   search_all: 搜索全部
   label_attachment_info: 附件信息
+  label_attachment_file_size_limit: 文件大小限制 %{limit}
+  label_attachment_file_type: 文件类型限制 %{type}
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=====================#
   label_lookup_types: 快速编码类型
