--- a/modules/10_ironmine_irm/config/locales/zh.yml
+++ b/modules/10_ironmine_irm/config/locales/zh.yml
@@ -1858,6 +1858,7 @@ zh:
   label_search_previous_page: 上一页
   label_search_next_page: 下一页
   label_search_attachment: 附件
+  label_before_forever: 所有时间内
   label_before_one_day: 24 小时内
   label_before_one_week: 1 周内
   label_before_one_month: 1 月内
